monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4121/A4121b.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A4121;

grammar A4121b {

  symbol A = Name;

  symbol AdaptedA = Name;

}